--- a/src/css/NuestrasMarcas.module.css
+++ b/src/css/NuestrasMarcas.module.css
@@ -32,6 +32,11 @@
     border-radius: 20px;
     margin: 10px 10px;
     box-shadow: 2px 3px 5px rgba(73, 69, 52, 0.4);
+    animation-name: show;
+    animation-timeline: view();
+    animation-range: entry 15% cover 40%;
+    animation-fill-mode: both;
+    transition: transform 0.2s ease;
 }
 
 .nuestrasMarcas .marcas .contenedorLogo .imgMarca{
@@ -46,6 +51,18 @@
 
 .contenedorLogoDark{
     background-color: var(--color-dark);
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 @media (max-width:630px) {
