--- a/src/css/NuestroProfesionales.module.css
+++ b/src/css/NuestroProfesionales.module.css
@@ -36,8 +36,13 @@
     padding: 20px 10px;
     margin: 10px;
     border-radius: 15px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    animation-name: show;
+    animation-timeline: view();
+    animation-range: entry 15% cover 40%;
+    animation-fill-mode: both;
+    transition: transform 0.2s ease, background-color 0.3s ease;
     transform: scale(1);
+
 }
 
 .contenedorCardsVet .cardVeterinario:hover {
@@ -98,6 +103,18 @@
 
 .odontologoDark{
     background-color: var(--color-dark);
+}
+
+@keyframes show {
+    from {
+        opacity: 0;
+        transform: scale(0.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 
 @media (max-width:700px){
